# arduino-udev

./: .gitignore  AUTHORS.txt  CMakeLists.txt  LICENSE.txt  MANIFEST.in  README.md  arduino-udev-0.2.3.tar.gz.delta  arduino-udev-0.2.3.tar.gz.id  arduino-udev-0.2.4.tar.gz.delta  arduino-udev-0.2.4.tar.gz.id  arduino-udev_0.2.1.orig.tar.gz.delta  arduino-udev_0.2.1.orig.tar.gz.id  arduino-udev_0.2.2.orig.tar.gz.delta  arduino-udev_0.2.2.orig.tar.gz.id  package.xml  setup.py
firmware/UDEV/: UDEV.cpp  UDEV.h
firmware/example/: firmware.ino
firmware/example2/: Makefile  example2.py  firmware.ino
src/: arduinoudev.py
udev/: 99-arduino-udev.rules
