<?xml version="1.0"?>
<package>
  <name>arduino_udev</name>
  <version>0.0.1</version>
  <description>The arduino-udev package</description>

  <maintainer email="strawman@astraw.com">Andrew Straw</maintainer>


  <license>BSD</license>


  <url type="website">https://github.com/strawlab/arduino-udev</url>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>python-serial</build_depend>
  <build_depend>arduino-mk</build_depend>

  <run_depend>python-serial</run_depend>



</package>
